<!--
  * Copyright (C) 2018 Madonah Syombua
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *-->
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Popular Movies</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="error_while_closing">An Error Occurred while closing</string>
    <string name="sort_pop">Popular Movies</string>
    <string name="sort_rating">Top Rated</string>
    <string name="movie_parcel">PARCEL_MOVIE</string>
    <string name="connect">Connectivity Issues</string>
    <string name="sort_method_key">Sort Method Key</string>
    <string name="sort_pop_dec" >Sort Popularity</string>
    <string name="sort_avg_dec" >Sort Average</string>
    <string name="todo">TODO</string>
    <string name="title">After the death of his father, T\'Challa returns home to the African nation of Wakanda to take his rightful place as king. When a powerful enemy suddenly reappears, T\'Challa\'s mettle as king — and as Black Panther — gets tested when he's drawn into a conflict that puts the fate of Wakanda </string>
    <string name="date">Release Date</string>
    <string name="vote_average">4.0 / 5.0</string>
    <string name="released">February 16, 2018</string>
    <string name="brief">Black Panther</string>
    <string name="votes">1000 votes</string>
    <string name="release_date_error">Error while loading Date</string>
    <string name="no_date_found">No date found</string>
    <string name="tmdb_sort_pop_desc">popularity.desc</string>
    <string name="tmdb_sort_vote_avg_desc">vote_average.desc</string>
    <string name="pref_sort_method_key">SORT_METHOD</string>
    <string name="pref_sort_vote_avg_desc_key">SORT_VOTE_AVERAGE_DESC</string>
    <string name="pref_sort_pop_desc_key">SORT_POPULARITY_DESC</string>
    <string name="sort_popular">PopularMovies</string>
    <string name="top_rated">Top Rated Movies</string>

</resources>
