<?xml version="1.0" encoding="utf-8"?>
<!--
  * Copyright (C) 2018 Madonah Syombua
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  *-->
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.MovieListDetail">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- My Poster imageview-->
        <ImageView
            android:id="@+id/imageview_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            android:adjustViewBounds="true"
            android:src="@drawable/movie_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rating"
            android:contentDescription="@string/todo"
            />

        <!-- my rating widget -->
        <android.support.v7.widget.AppCompatRatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            android:numStars="5"
            app:layout_constraintBottom_toTopOf="@id/imageview_poster"
            app:layout_constraintTop_toBottomOf="@id/imageview_poster"
            app:layout_constraintRight_toRightOf="parent" />

        <!-- my divider -->
        <View
            android:id="@+id/div_rating"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toTopOf="@id/textview_vote_average"
            app:layout_constraintBottom_toBottomOf="@id/textview_vote_average"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/imageview_poster"/>


        <TextView
            android:id="@+id/textview_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/vote_average"
            app:layout_constraintTop_toBottomOf="@id/rating"
            app:layout_constraintRight_toRightOf="@id/div_rating"
            app:layout_constraintLeft_toRightOf="@id/imageview_poster"

            />

        <TextView
            android:id="@+id/textview_vote_average_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/textview_vote_average"
            app:layout_constraintBottom_toTopOf="@id/textview_vote_average"
            app:layout_constraintLeft_toLeftOf="@id/div_rating"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="@string/votes"/>

        <View
            android:id="@+id/div_poster"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/imageview_poster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <TextView
            android:id="@+id/textview_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintTop_toBottomOf="@id/div_poster"
            app:layout_constraintLeft_toLeftOf="@id/div_poster"
            app:layout_constraintRight_toRightOf="@id/div_poster"
            tools:text="@string/brief"/>

        <TextView
            android:id="@+id/textview_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            app:layout_constraintTop_toBottomOf="@id/textview_original_title"
            app:layout_constraintLeft_toLeftOf="@id/textview_original_title"
            app:layout_constraintRight_toRightOf="@id/textview_original_title"
            tools:text="@string/title"/>

        <View
            android:id="@+id/div_plot"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/textview_overview"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/textview_release_date_title"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/div_plot"
            tools:text="@string/date" />

        <TextView
            android:id="@+id/textview_release_date"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_margin="@dimen/sixteen_dp"
            android:layout_marginTop="12dp"
            android:textSize="@dimen/text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_release_date_title"
            tools:text="@string/released" />

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>